# simple_ros2_example

awesome_library/: CMakeLists.txt  package.xml
awesome_library/include/awesome_library/: awesomeness.h
awesome_library/src/: awesomeness.cpp
fantastic_node/: CMakeLists.txt  package.xml
fantastic_node/src/: fnode.cpp
