<?xml version="1.0"?>
<package format="2">
  <name>awesome_library</name>
  <version>0.0.0</version>
  <description>The awesome_library package</description>

  <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>

  <license>Proprietary</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  <depend>geometry_msgs</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
