<?xml version="1.0"?>
<package format="2">
  <name>fantastic_node</name>
  <version>0.0.0</version>
  <description>The fantastic_node package</description>

  <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>

  <license>Proprietary</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  
  <depend>awesome_library</depend>
  <depend>rclcpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
